[SGR-90] Fix - Adjust some spacings in the top and bottom of sections #50

--- a/app/components/HomePage/AboutSection/AboutSection.module.css
+++ b/app/components/HomePage/AboutSection/AboutSection.module.css
@@ -62,7 +62,7 @@
 
 @media (max-width: 792px) {
     #aboutSectionContainer {
-        margin: 35px 25px;
+        margin: 30px 25px;
         gap: 25px;
         flex-direction: column;
     }
