--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -22,7 +22,7 @@ main {
 
 @media (max-width: 792px) {
     .section-title {
-        font-size: 25px;
+        font-size: 2rem;
     }
 }
 
